--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -7,35 +7,39 @@
   <script src="https://www.google.com/jsapi?key=AIzaSyAagP8OMcTFjv1Fiz08bfMmL0SirqzMx7E" type="text/javascript"></script>
 </head>
   <body>
-      <div class="container">
-       <div class="z-depth-5 #ffffff white">
-         <h4 class="card-panel #ef5350 red lighten-1">Submit an Order</h4>
+    <body background="images/dante.jpg">
+    <br>
+    <br>
 
-            <form class="form-horizontal" action="/signup" method="post">
+      <div class="container">
+       <div  id="form" class="z-depth-5 #ffffff white">
+         <h4 class="card-panel #ef5350 red lighten-1 white-text">Submit an Order</h4>
+          <br>
+          <br>
+          <br>
+          <br>
+           <form class="form-horizontal" action="/signup" method="post">
               <fieldset>
                 <legend>Sign Up</legend>
-                <img id="b" src="" alt="">
-                <div class="form-group">
-                  <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-                  <div class="col-lg-10">
+                <div  id="form" class="form-group">
+                 <div class="col-lg-10">
                     <input name="email" type="text" class="form-control" id="inputEmail" placeholder="Email">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="inputPassword" class="col-lg-2 control-label">Password</label>
                   <div class="col-lg-10">
                     <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Password">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="inputPassword" class="col-lg-2 control-label">Name</label>
                   <div class="col-lg-10">
                     <input name="name" type="text" class="form-control" id="inputPassword" placeholder="Name">
                   </div>
                 </div>
+
                 <div class="form-group">
                   <div class="col-lg-10 col-lg-offset-2">
-                    <button type="submit" class="btn btn-primary">Join!</button>
+                    <button type="submit" class="btn btn-primary #e53935 red darken-1">Join!</button>
                   </div>
                 </div>
               </fieldset>
@@ -43,12 +47,10 @@
           </div>
         </div>
       </div>
-        <script src="script/jquery.js"></script>
-  <script type="text/javascript" src="script/materialize.js"></script>
-    <script src="script/script.js"></script>
-
   </body>
 </html>
 
 </body>
 </html>
+
+
