--- a/public/style/materialize.css
+++ b/public/style/materialize.css
@@ -1019,11 +1019,11 @@
 }
 
 .teal.lighten-1 {
-  background-color: #26a69a !important;
+  background-color: #000000 !important;
 }
 
 .teal-text.text-lighten-1 {
-  color: #26a69a !important;
+  color: #000000 !important;
 }
 
 .teal.darken-1 {
@@ -3063,7 +3063,7 @@ td, th {
 }
 
 .collection .collection-item.active {
-  background-color: #26a69a;
+  background-color: #000000;
   color: #eafaf9;
 }
 
@@ -3074,7 +3074,7 @@ td, th {
 .collection a.collection-item {
   display: block;
   transition: .25s;
-  color: #26a69a;
+  color: #000000;
 }
 
 .collection a.collection-item:not(.active):hover {
@@ -3097,7 +3097,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #26a69a;
+  color: #000000;
 }
 
 .collapsible .collection {
@@ -3136,12 +3136,12 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #26a69a;
+  background-color: #000000;
   transition: width .3s linear;
 }
 
 .progress .indeterminate {
-  background-color: #26a69a;
+  background-color: #000000;
 }
 
 .progress .indeterminate:before {
@@ -3304,7 +3304,7 @@ span.badge.new {
   font-weight: 300;
   font-size: 0.8rem;
   color: #fff;
-  background-color: #26a69a;
+  background-color: #000000;
   border-radius: 2px;
 }
 
@@ -5096,7 +5096,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #26a69a;
+  background-color: #000000;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
@@ -5117,7 +5117,7 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #26a69a;
+  background-color: #000000;
   border-radius: 50%;
   transition: .3s;
   cursor: pointer;
@@ -5125,7 +5125,7 @@ small {
 }
 
 .btn-floating:hover {
-  background-color: #26a69a;
+  background-color: #000000;
 }
 
 .btn-floating:before {
@@ -5272,7 +5272,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #26a69a;
+  background-color: #000000;
   border-radius: 50%;
   -webkit-transform: scale(0);
           transform: scale(0);
@@ -5357,7 +5357,7 @@ button.btn-floating {
 
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #26a69a;
+  color: #000000;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -5726,8 +5726,8 @@ button.btn-floating {
 }
 
 .chips.focus {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #000000;
+  box-shadow: 0 1px 0 0 #000000;
 }
 
 .chips:hover {
@@ -5735,7 +5735,7 @@ button.btn-floating {
 }
 
 .chips .chip.selected {
-  background-color: #26a69a;
+  background-color: #000000;
   color: #fff;
 }
 
@@ -5953,8 +5953,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #000000;
+  box-shadow: 0 1px 0 0 #000000;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -5970,7 +5970,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #000000;
 }
 
 input:not([type]).valid, input:not([type]):focus.valid,
@@ -5998,8 +5998,8 @@ input[type=search].valid,
 input[type=search]:focus.valid,
 textarea.materialize-textarea.valid,
 textarea.materialize-textarea:focus.valid {
-  border-bottom: 1px solid #4CAF50;
-  box-shadow: 0 1px 0 0 #4CAF50;
+  border-bottom: 1px solid #000000;
+  box-shadow: 0 1px 0 0 #000000;
 }
 
 input:not([type]).valid + label:after,
@@ -6029,7 +6029,7 @@ input[type=search]:focus.valid + label:after,
 textarea.materialize-textarea.valid + label:after,
 textarea.materialize-textarea:focus.valid + label:after {
   content: attr(data-success);
-  color: #4CAF50;
+  color: #000000;
   opacity: 1;
 }
 
@@ -6157,7 +6157,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field label {
-  color: #9e9e9e;
+  color: #fff;
   position: absolute;
   top: 0.8rem;
   left: 0;
@@ -6180,7 +6180,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #000000;
 }
 
 .input-field .prefix ~ input,
@@ -6229,7 +6229,7 @@ textarea.materialize-textarea + label:after {
 .input-field input[type=search]:focus + label i,
 .input-field input[type=search]:focus ~ .mdi-navigation-close,
 .input-field input[type=search]:focus ~ .material-icons {
-  color: #444;
+  color: #000000;
 }
 
 .input-field input[type=search] + label {
@@ -6358,12 +6358,12 @@ textarea.materialize-textarea {
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:before,
 [type="radio"].with-gap:checked + label:after {
-  border: 2px solid #26a69a;
+  border: 2px solid #000000;
 }
 
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:after {
-  background-color: #26a69a;
+  background-color: #000000;
 }
 
 [type="radio"]:checked + label:after {
@@ -6496,8 +6496,8 @@ form p:last-child {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #26a69a;
-  border-bottom: 2px solid #26a69a;
+  border-right: 2px solid #000000;
+  border-bottom: 2px solid #000000;
   -webkit-transform: rotate(40deg);
           transform: rotate(40deg);
   -webkit-backface-visibility: hidden;
@@ -6519,7 +6519,7 @@ form p:last-child {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #26a69a;
+  border-right: 2px solid #000000;
   border-bottom: none;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
@@ -6588,8 +6588,8 @@ form p:last-child {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #26a69a;
-  background-color: #26a69a;
+  border: 2px solid #000000;
+  background-color: #000000;
   z-index: 0;
 }
 
@@ -6601,8 +6601,8 @@ form p:last-child {
 
 [type="checkbox"].filled-in.tabbed:checked:focus + label:after {
   border-radius: 2px;
-  background-color: #26a69a;
-  border-color: #26a69a;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 [type="checkbox"].filled-in:disabled:not(:checked) + label:before {
@@ -6649,7 +6649,7 @@ form p:last-child {
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #26a69a;
+  background-color: #000000;
   left: 24px;
 }
 
@@ -6896,7 +6896,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #000000;
   top: 10px;
   margin-left: -6px;
   -webkit-transform-origin: 50% 50%;
@@ -6909,7 +6909,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #26a69a;
+  color: #000000;
   font-size: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -6942,7 +6942,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #000000;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
@@ -6970,7 +6970,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #000000;
   margin-top: -5px;
 }
 
@@ -7005,7 +7005,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #000000;
 }
 
 input[type=range]:focus::-ms-fill-lower {
@@ -7125,7 +7125,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .side-nav li > a.btn-floating:hover {
-  background-color: #26a69a;
+  background-color: #000000;
 }
 
 .side-nav li > a > i,
@@ -7334,7 +7334,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #26a69a;
+  border-color: #000000;
 }
 
 .spinner-blue,
@@ -8609,7 +8609,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .picker__date-display {
   text-align: center;
-  background-color: #26a69a;
+  background-color: #000000;
   color: #fff;
   padding-bottom: 15px;
   font-weight: 300;
@@ -8672,7 +8672,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .picker__day.picker__day--today {
-  color: #26a69a;
+  color: #000000;
 }
 
 .picker__day.picker__day--today.picker__day--selected {
@@ -8689,7 +8689,7 @@ input[type=range]:focus::-ms-fill-upper {
   border-radius: 50%;
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
-  background-color: #26a69a;
+  background-color: #000000;
   color: #ffffff;
 }
 
@@ -8707,7 +8707,7 @@ input[type=range]:focus::-ms-fill-upper {
 .picker__close, .picker__today {
   font-size: 1.1rem;
   padding: 0 1rem;
-  color: #26a69a;
+  color: #000000;
 }
 
 .picker__nav--prev:before,
