--- a/views/index.html
+++ b/views/index.html
@@ -58,9 +58,7 @@
 
 
 If we can’t print it here, we can help you find a place to get what you need. In house we can print any flat item that needs a logo or anything for that special event.
-
 Order Fulfillment
-
 Already have a web store or apparel line and need a printer for your items. Look no further we can even ship them directly to your customer.
 <br>
 <br>
@@ -95,7 +93,7 @@ Already have a web store or apparel line and need a printer for your items. Look
         <!-- EMAIL_NAME 1 -->
          <div class="input-field col s3">
             <span class="flow-text">
-        <input id="email_address" name="_replyto"" placeholder="Email Address" onfocus="if (this.placeholder=='Email') this.placeholder='';">
+        <input id="email_address" name="_replyto" placeholder="Email Address" onfocus="if (this.placeholder=='Email') this.placeholder='';">
       </span>
       </div>
     </div>
@@ -318,7 +316,7 @@ Already have a web store or apparel line and need a printer for your items. Look
           </form>
           </div>
          </div>
-        {{/logged_in}}
+        <!-- {{/logged_in}} -->
 
 
 
