--- a/views/home/index.html
+++ b/views/home/index.html
@@ -33,7 +33,7 @@
 <br>
 <br>
 <br>
-   <div id="a"><p></p></div>-Ron Swanson
+   <div id="a"><p>Your order has been confirmed. You should receieve an confirmation email in 1-2 days. </p></div>
 <br>
 <br>
 <br>
